--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,16 @@
-body {
-    padding-top: 90px;
+#login_form {
+  margin-top: 30px;
 }
+
+#result_form {
+  margin-top: 30px;
+}
+
+#submitButton {
+  margin-top: 30px;
+  width: 10%;
+}
+
 .panel-login {
 	border-color: #ccc;
 	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
