Ajout de la page admin avec le upload

--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -62,7 +62,10 @@ h2 {
 }
 
 @media (min-width: 992px) {
-  .container {
-    width: 450px;
-  }
+
+}
+
+#upload {
+  margin-left: auto;
+  margin-right: auto;
 }
